# Utils

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  portfile.cmake  vcpkg.json
cmake/: UtilsConfig.cmake.in
scripts/: refactor_modified_files.sh  setup_workspace.sh
scripts/.debian/: setup_workspace.sh
scripts/.macos/: setup_workspace.sh
src/: CMakeLists.txt  main.cpp
src/Calc/: CMakeLists.txt  Calc.cpp  Calc.hpp
src/Calc/inc/: utils.hpp
src/Config/: CMakeLists.txt  ConfigManagers.h  IConfigProvider.h
src/Config/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  IConfigParser.h  JsonConfigParser.h  dependencies.cmake
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Logging/: CMakeLists.txt
src/PublishSubscribe/: CMakeLists.txt  IPublisherSubscriber.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  Mocks.h  testConfigProvider.cpp  testConfigPublisher.cpp  testJsonConfigParser.cpp
versions/u-/: utils.json
